styles/place.css
:root {
    --primary-color: #00209f;
    --secondary-color: #d21034;
    --light-color: #222222;
    --dark-color: #222;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: Arial, Helvetica, sans-serif;
    background-color: #f5f5f5;
    color: var(--text-color);
}

header {
    background-color: #c8102e;
    color: white;
    text-align: center;
    padding: 1rem;
}

header h1 {
    font-size: 2rem;
}

.hero {
    display: block;
}

.hero img {
    width: 100%;
    height: auto;
    display: block;
}


.data,
.weather {
    text-align: center;
    background-color: #0057b8;
    margin: 1rem;
    padding: 1rem;
    border-radius: 8px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
}

.data h2,
.weather h2 {
    background-color: #0b7d3b;
    color: white;
    padding: .5rem;
    margin: 1rem 
    text-align: center;
}

.weather-icon {
    width: 80px;
    margin: 1rem auto;
    display: block;
}

.information p {
    margin: 4rem 0;
}

.data p,
.weather p {
    margin: .5rem 0;
}

.weather img {
    width: 60px;
    height: 5%;
    display: block;
    margin: 0 auto;
}

footer {
    background-color: #c8102e;
    color: white;
    border-radius: 8px;
    text-align: center;
    padding: 1rem;
    margin-top: 1rem;
}

footer p {
    margin: 4rem 0;
}

